[gd_scene load_steps=14 format=2]

[ext_resource path="res://art/anemy/skullface/skull1.png" type="Texture" id=1]
[ext_resource path="res://art/anemy/skullface/skull3.png" type="Texture" id=2]
[ext_resource path="res://art/anemy/skullface/skull2.png" type="Texture" id=3]
[ext_resource path="res://art/anemy/skullface/skull4.png" type="Texture" id=4]
[ext_resource path="res://art/anemy/skullface/skullhit0.png" type="Texture" id=5]
[ext_resource path="res://skull.gd" type="Script" id=6]
[ext_resource path="res://light animted.tres" type="Texture" id=7]
[ext_resource path="res://sound/hits/zapsplat_impacts_body_hit_baseball_bat_hard_whack_crack_squelchy_bloody_005_44151.wav" type="AudioStream" id=8]
[ext_resource path="res://hitsound.gd" type="Script" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 4 ) ],
"loop": true,
"name": "fly",
"speed": 10.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "hit",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4.99365, 7.62796 )

[sub_resource type="CircleShape2D" id=3]
radius = 496.691

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 8.01403, 8.10456 )

[node name="skull" type="KinematicBody2D" groups=["enemie"]]
collision_layer = 16384
collision_mask = 32895
script = ExtResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "fly"
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.561867, 0 )
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 32780

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
shape = SubResource( 3 )

[node name="collide" type="Area2D" parent="."]
collision_layer = 16448
collision_mask = 32769

[node name="CollisionShape2D" type="CollisionShape2D" parent="collide"]
visible = false
position = Vector2( 0.23597, 0 )
shape = SubResource( 4 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 2.06472, -1.35682 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 7 )

[node name="Light2D2" type="Light2D" parent="."]
position = Vector2( -3.24457, -1.17984 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 7 )

[node name="hitsound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = 2.476
script = ExtResource( 9 )

[node name="deathTimer" type="Timer" parent="."]

[node name="stoppTimer" type="Timer" parent="."]
wait_time = 0.2

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="collide" to="." method="_on_collide_body_entered"]
[connection signal="body_exited" from="collide" to="." method="_on_collide_body_exited"]
[connection signal="timeout" from="deathTimer" to="." method="_on_deathTimer_timeout"]
[connection signal="timeout" from="stoppTimer" to="." method="_on_stoppTimer_timeout"]
